# software_development

./: README.md
dev1/: December.c  Makefile  strange_app
dev2/: .gdb_history  a.out  gdb.py  public.c
dev3/clean/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac
dev3/clean/autom4te.cache/: output.1  requests  traces.0  traces.1
python1/: .gdb_history  solution.py
python2/: python2.py
python3/blocks/: solution.py
python3/blocks/.ropeproject/: globalnames
shell1/: prova.txt  solution.sh
shell2/: README.txt  awkprof.out  solution.sh  tmp
shell3/: not_recents  recents  solution.sh  solution.sh.bak
